--- a/datagraphs/src/pages/DashBoard.css
+++ b/datagraphs/src/pages/DashBoard.css
@@ -11,6 +11,7 @@
     background:whitesmoke;
     transition: all ease 0.5s;
   }
+
   /* .card {
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
   }
@@ -40,10 +41,51 @@
     transform: scale(1.1);
     box-shadow: 0px 10px 40px 2px rgba(0, 0, 0, 0.25);
     cursor:grab;
-    transform:translatey(-30px);
+    transform:translatey(-0px);
     background:linear-gradient(45deg,#00dbbe);
     /* background:linear-gradient(45deg,#b95cb9,rgba(149, 214, 138, 0.6)); */
   }
   /* box-shadow: 
     12px 12px 16px 0 rgba(255, 255, 255, 0.3) inset,
     -8px -8px 12px 0 rgba(0, 0, 0, .25) inset; */
+
+/* 
+  @media (max-width: 576px) {
+    .card {
+      height: auto;
+    }
+
+    .row {
+      margin: 10px;
+    }
+
+    .col-12 {
+      margin-bottom: 20px;
+    }
+
+    h3 {
+      text-align: center;
+      margin-top: 10px;
+    }
+
+  
+  } */
+
+
+  .data-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .data-container span {
+    display: flex;
+    align-items: center;
+  }
+
+  .data-container span b {
+    margin-right: 10px;
+  }
+  .data-container-legends span b{
+    margin-right: 60px;
+  }
