--- a/datagraphs/src/pages/DashBoard.css
+++ b/datagraphs/src/pages/DashBoard.css
@@ -24,7 +24,8 @@
     /* box-shadow: 
     12px 12px 16px 0 rgba(0, 0, 0, 0.25),
     -8px -8px 12px 0 rgba(255, 255, 255, 0.3); */
-    background-color: #afd275;
+    background: linear-gradient(to top, rgb(184, 204, 195), white);
+
     /* box-shadow: 
       12px 12px 16px 0 rgba(0, 0, 0, 0.25),
       -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
@@ -43,33 +44,9 @@
     cursor:grab;
     transform:translatey(-0px);
     background:linear-gradient(45deg,#00dbbe);
-    /* background:linear-gradient(45deg,#b95cb9,rgba(149, 214, 138, 0.6)); */
+ 
   }
-  /* box-shadow: 
-    12px 12px 16px 0 rgba(255, 255, 255, 0.3) inset,
-    -8px -8px 12px 0 rgba(0, 0, 0, .25) inset; */
-
-/* 
-  @media (max-width: 576px) {
-    .card {
-      height: auto;
-    }
-
-    .row {
-      margin: 10px;
-    }
-
-    .col-12 {
-      margin-bottom: 20px;
-    }
-
-    h3 {
-      text-align: center;
-      margin-top: 10px;
-    }
-
-  
-  } */
+ 
 
 
   .data-container {
@@ -87,5 +64,27 @@
     margin-right: 10px;
   }
   .data-container-legends span b{
-    margin-right: 60px;
+    margin-right: 40px;
   }
+
+
+  @keyframes blinkAnimation {
+    0% {
+      opacity: 1;
+    }
+    50% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  
+  .icon {
+    animation: blinkAnimation 3s ease-in-out infinite;
+  }
+
+  #chillercard{
+    background: 'lineargradient(to right, lighred, white)'
+  }
+  
