--- a/datagraphs/src/pages/DashBoard.css
+++ b/datagraphs/src/pages/DashBoard.css
@@ -34,10 +34,13 @@
     /* box-shadow: inset 11px 11px 39px #5b5f4e,
             inset -11px -11px 39px #b9ca8a; */
             border-radius: 30px;
-   box-shadow: 
-   7px 7px 14px #404630,
-             -5px -5px 10px #a0a1a3;
+            box-shadow: 10px 10px 10px rgba(0.3, 0.3, 0.3, 0.4);
+
+            /* box-shadow: 
+            3px 3px 10px #111111,
+            -2px -2px 8px #a0a1a3; */
   }
+  
   .card:hover {
     transform: scale(1.1);
     box-shadow: 0px 10px 40px 2px rgba(0, 0, 0, 0.25);
@@ -67,7 +70,7 @@
     margin-right: 40px;
   }
 
-
+/* 
   @keyframes blinkAnimation {
     0% {
       opacity: 1;
@@ -87,4 +90,8 @@
   #chillercard{
     background: 'lineargradient(to right, lighred, white)'
   }
+   */
+
+
+
   
